Updated the styling and the wording for the spill time compliance check alert, issue #777

--- a/css/less/skin.less
+++ b/css/less/skin.less
@@ -110,6 +110,13 @@ img{
         width: 100%;
         overflow: scroll;
     }
+
+    .swal2-modal {
+        h2 {
+            line-height: 1em;
+            margin-bottom: 15px;
+        }
+    }
 }
 
 .app-state{
